--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <h3>I am coding & coding</h3>
     <p>more paragraph</p>
     <p>I am coding & coding</p>
-    <p>comand check</p>
+    <p>comand checked</p>
 </body>
 </html>
