--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <p>more paragraph</p>
     <p>I am coding & coding</p>
     <p>comand checked</p>
+    <img src="Hossain1.png" alt="">
+    <img src="Baby.jpeg" alt="">
 </body>
 </html>
